[package]
name = "doh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json", "default", "stream"] }
dns-parser = "0.8"
dns-message-parser = "0.7.0"
base64 = "0.21"
bytes = "1"
qstring = "0.7.2"
tokio = { version = "1.32", features = ["full"] }
uuid = {version = "1.4.1", features=["v4", "fast-rng"]}
serde_derive = "1.0.188"
serde = "1.0"
url = "2.4.1"
env_logger = "0.10.0"
log = "0.4.20"
chrono = "0.4.31"

